<resources>
    <string name="app_name">Recipes</string>
    <string name="title_activity_preview">PreviewActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="touch_anyway_to_start">Touch here to start</string>
    <string name="recipes">RECIPES</string>
    <string name="Yaichnicha">Яичница</string>
    <string name="KakSdelatbYaichnichu1">Подготавливаем продукты по списку.</string>
    <string name="ingridients_yaishnicha"><b>Ингредиенты:</b> \nЯйца — 3 Штуки \nРастительное масло — 1 Ст. ложка \nСоль — По вкусу</string>
    <string name="b_1_b"><h1><b>1.</b></h1>Налейте растительное масло в чистую сковороду и поставьте на огонь.</string>
    <string name="_2"><h1><b>2.</b></h1> Разбейте яйца и вылейте их на сковороду, стараясь не повредить желток.</string>
    <string name="_3_"><h1><b>3.</b></h1>Посолите по вкусу и жарьте 2–3 минуты. Лопаткой аккуратно переложите яичницу на тарелку и подавайте на стол.</string>
    <string name="itsForYou"><h1>Приятного аппетита!</h1></string>
    <string name="ingridients_cesar">Ингредиенты: \nЛистья салата  — 100 Грамм \nКуриное филе  — 200 Грамм \nКрутоны (сухарики)  — 50 Грамм \nПармезан  — 50 Грамм \nЯйца куриные  — 2 Штуки \nПетрушка  — - По вкусу \nСоус для цезаря  — 50 Миллилитров</string>
    <string name="SaladCesar">Салат "Цезарь"</string>
    <string name="firststpageCesar"><h1><b>1.</b></h1>Итак, вот - все необходимые нам ингредиенты. Сразу сделаю оговорку: я использовал уже готовый соус Цезарь (мне привезли из Европы, что-то похожее продается и у нас), однако если у вас его нет - соус для цезаря можно приготовить и самому. В этом приложении есть рецепт</string>
    <string name="secondpageCesar"><h1><b>2.</b></h1>Листья салата я использовал свежие, собственноручно выращенные на своей даче. Салат должен быть максимально свежим и качественным, чтобы Цезарь получился вкусным.</string>
    <string name="thirdCesar"><h1><b>3.</b></h1>Кусок куриного филе целиком необходимо обжарить на сковороде-гриль, ну или на обычной сковороде. Примерно по 3-4 минуты с каждой стороны, до образования уверенной корочки. Внутри мясо должно оставаться сочным. Яйца отвариваем вкрутую и нарезаем слайсами.</string>
    <string name="fourthCesar"><h1><b>4.</b></h1>Повторюсь, соус и крутоны у меня уже готовые, однако если у вас их нет - крутоны можно приготовить путем поджаривания небольших кусочков хлеба на сухой сковороде или запекания их в духовке, а рецепт соуса для цезаря есть в этом приложении.</string>
    <string name="borshch">Борщ</string>
    <string name="pelmeni">Пельмени</string>
    <string name="souseForCesar">Соус для "Цезаря"</string>
    <string name="Kutya">Кутя</string>
    <string name="Plov">Плов</string>
    <string name="soupWthFricadelki">Суп с фрикадельками</string>
    <string name="Boilion">Бульйон</string>
    <string name="Draniki">Драники</string>
    <string name="Shaurma">Шаурма</string>
    <string name="Chicken">Жариные куриные ножки</string>
    <string name="Ledenci">Леденцы на палочке</string>
    <string name="Zefir">Зефир</string>
    <string name="PieWthStrawberry">Пирог с клубникой</string>
    <string name="Lemonade">Лимонад</string>
    <string name="HotFood">Горячие блюда</string>
    <string name="Salads">Салаты</string>
    <string name="allDishes">Все блюда</string>


</resources>